<resources>
    <string name="app_name">SzWeather</string>
    <string name="load_success">Loading success</string>
    <string name="load_error">Loading error</string>
    <string name="code" translatable="false">code</string>
    <string name="time_out">Time out Try again</string>
    <string name="PARSE_ERROR_MSG">Failed to parse data</string>
    <string name="BAD_NETWORK_MSG">Network problem</string>
    <string name="CONNECT_ERROR_MSG">Connection error</string>
    <string name="CONNECT_TIMEOUT_MSG">Connection timed out</string>
    <string name="OTHER_MSG">Unknown error</string>
    <string name="error_msg" translatable="false">msg</string>
    <string name="weatherurl" translatable="false">https://devapi.qweather.com/</string>
    <string name="key" translatable="false">71deef4fa8874cbfa2b058a9ea091f7d</string>
    <string name="geourl" translatable="false">https://geoapi.qweather.com/</string>
    <string name="mxzp" translatable="false">https://www.mxnzp.com/</string>

    <string name="permission_must">The permission to be applied for is the permission that the program must rely on. You need permission to use our software</string>
    <string name="i_know">I understand</string>
    <string name="permission_hand">You need to manually open the permission in the application settings</string>
    <string name="deny">You have denied the following permissions:</string>
    <string name="hours_weather">24 hours weather</string>
    <string name="hours" translatable="false">8:00</string>
    <string name="forecast_15">"Fifteen day forecast "</string>
    <string name="air_quality">Air Quality</string>
    <string name="pm2_5" translatable="false">PM2.5</string>
    <string name="so2" translatable="false">SO₂</string>
    <string name="co" translatable="false">CO</string>
    <string name="pm10" translatable="false">PM10</string>
    <string name="no2" translatable="false">NO₂</string>
    <string name="o3" translatable="false">O³</string>
    <string name="sun_moon">SUN AND MOON</string>
    <string name="home_wear">Dress Index</string>
    <string name="home_health">Cold Index</string>
    <string name="home_makeup">Makeup Index</string>
    <string name="living_index">Living Index</string>
    <string name="double_quit">"Presse again, quit  "</string>
    <string name="cancel">cancel</string>
    <string name="popularCity">popularCity</string>
    <string name="Search">SearchCity</string>
    <string name="city_search">City Search</string>
    <string name="city_manage">City Manage</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="Sunrise">Srise</string>
    <string name="SunSet">Sset</string>
    <string name="MoonRise">Mrise</string>
    <string name="MoonSet">Mset</string>
    <string name="feel">Feel</string>
    <string name="Humidity">Humidity</string>
    <string name="Wind">Wind</string>
    <string name="Air_pressure">AirPres</string>
    <string name="City_existed">city has existed</string>
    <string name="getLocation_fail">Positioning failed</string>
    <string name="city_not_existe">Cities don\'t exist</string>
    <string name="city_is_full">Maximum number of cities</string>
</resources>