<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cityAdd_btn_back"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:background="@drawable/back"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:id="@+id/cityAdd_edittext_search"
            android:hint="@string/Search"
            />
        <Button
            android:id="@+id/cityAdd_btn_search"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/popCity"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popularCity"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/location_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants">>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popCity_recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>