<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout style="@style/HomeCard">
        <TextView
            android:id="@+id/tv_title"
            style="@style/HomeCard_Title"
            android:text="@string/living_index"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:id="@+id/img_wear"
            style="@style/img_item_feel"
            android:src="@drawable/icon_wear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/img_health"
            app:layout_constraintBottom_toBottomOf="@id/img_health"/>

        <ImageView
            android:id="@+id/img_health"
            style="@style/img_item_feel"
            android:layout_marginTop="8dp"
            android:src="@drawable/icon_health"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <ImageView
            android:id="@+id/img_makeup"
            style="@style/img_item_feel"
            android:src="@drawable/icon_makeup"
            app:layout_constraintStart_toEndOf="@id/img_health"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/img_health"/>
        <TextView
            android:id="@+id/tv_wear_name"
            style="@style/name_item_feel"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/img_wear"
            app:layout_constraintEnd_toEndOf="@id/img_wear"
            app:layout_constraintTop_toBottomOf="@id/img_wear"
            android:text="@string/home_wear"/>
        <TextView
            android:id="@+id/tv_health_name"
            style="@style/name_item_feel"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/img_health"
            app:layout_constraintEnd_toEndOf="@id/img_health"
            app:layout_constraintTop_toBottomOf="@id/img_health"
            android:text="@string/home_health"/>
        <TextView
            android:id="@+id/tv_makeup_name"
            style="@style/name_item_feel"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/img_makeup"
            app:layout_constraintEnd_toEndOf="@id/img_makeup"
            app:layout_constraintTop_toBottomOf="@id/img_makeup"
            android:text="@string/home_makeup"/>
        <TextView
            android:id="@+id/tv_wear_value"
            style="@style/value_item_feel"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/tv_wear_name"
            app:layout_constraintEnd_toEndOf="@id/tv_wear_name"
            app:layout_constraintTop_toBottomOf="@id/tv_wear_name"
            android:text="热"/>
        <TextView
            android:id="@+id/tv_health_value"
            style="@style/value_item_feel"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/tv_health_name"
            app:layout_constraintEnd_toEndOf="@id/tv_health_name"
            app:layout_constraintTop_toBottomOf="@id/tv_health_name"
            android:text="较易发"/>
        <TextView
            android:id="@+id/tv_makeup_value"
            style="@style/value_item_feel"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="@id/tv_makeup_name"
            app:layout_constraintEnd_toEndOf="@id/tv_makeup_name"
            app:layout_constraintTop_toBottomOf="@id/tv_makeup_name"
            android:text="去油"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>